# applied-statistic-2nd

./: .gitignore  README.md  lab1.ipynb  lab2.ipynb  pyproject.toml
