[tool.poetry]
name = "прикладная-статистика"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin <etopanin@ya.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
scipy = "^1.16.1"
seaborn = "^0.13.2"
nbconvert = "^7.16.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
